--- a/admin.html
+++ b/admin.html
@@ -486,20 +486,24 @@
                         <td><small class="text-body">${createdDate}</small></td>
                         <td><small class="text-body">${lastLogin}</small></td>
                         <td class="text-end">
-                            <button class="btn btn-sm btn-icon" onclick="editUser('${user.id}')" title="Editar">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
-                                    <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
-                                </svg>
-                            </button>
-                            ${!isSelf ? `
-                                <button class="btn btn-sm btn-icon text-danger" onclick="deleteUser('${user.id}', '${user.name}')" title="Eliminar">
+                            <div class="d-flex justify-content-end gap-2">
+                                <button class="btn-action-pill btn-edit" onclick="editUser('${user.id}')" title="Editar">
                                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                        <polyline points="3 6 5 6 21 6"></polyline>
-                                        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                        <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                        <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
                                     </svg>
                                 </button>
-                            ` : ''}
+                                ${!isSelf ? `
+                                    <button class="btn-action-pill btn-delete" onclick="deleteUser('${user.id}', '${user.name}')" title="Eliminar">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                            <polyline points="3 6 5 6 21 6"></polyline>
+                                            <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                            <line x1="10" y1="11" x2="10" y2="17"></line>
+                                            <line x1="14" y1="11" x2="14" y2="17"></line>
+                                        </svg>
+                                    </button>
+                                ` : ''}
+                            </div>
                         </td>
                     </tr>
                 `;
@@ -634,12 +638,14 @@
                 text: lang === 'en' ? 'Do you want to logout?' : '¿Deseas cerrar sesión?',
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
                 confirmButtonText: lang === 'en' ? 'Yes, logout' : 'Sí, cerrar sesión',
                 cancelButtonText: lang === 'en' ? 'Cancel' : 'Cancelar',
-                background: theme === 'dark' ? '#1a1f3c' : '#fff',
-                color: theme === 'dark' ? '#fff' : '#000'
+                background: 'rgba(15, 23, 42, 0.9)',
+                color: '#fff',
+                customClass: {
+                    popup: 'premium-swal-popup',
+                    title: 'premium-swal-title'
+                }
             }).then((result) => {
                 if (result.isConfirmed) {
                     Auth.logout();
