--- a/admin.html
+++ b/admin.html
@@ -493,16 +493,14 @@
                                         <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
                                     </svg>
                                 </button>
-                                ${!isSelf ? `
-                                    <button class="btn-action-pill btn-delete" onclick="deleteUser('${user.id}', '${user.name}')" title="Eliminar">
-                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                            <polyline points="3 6 5 6 21 6"></polyline>
-                                            <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                                            <line x1="10" y1="11" x2="10" y2="17"></line>
-                                            <line x1="14" y1="11" x2="14" y2="17"></line>
-                                        </svg>
-                                    </button>
-                                ` : ''}
+                                <button class="btn-action-pill btn-delete" onclick="deleteUser('${user.id}', '${user.name}')" title="Eliminar">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <polyline points="3 6 5 6 21 6"></polyline>
+                                        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                        <line x1="10" y1="11" x2="10" y2="17"></line>
+                                        <line x1="14" y1="11" x2="14" y2="17"></line>
+                                    </svg>
+                                </button>
                             </div>
                         </td>
                     </tr>
@@ -638,10 +636,16 @@
                 text: lang === 'en' ? 'Do you want to logout?' : '¿Deseas cerrar sesión?',
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonText: lang === 'en' ? 'Yes, logout' : 'Sí, cerrar sesión',
+                confirmButtonText: lang === 'en' ? 'Logout' : 'Cerrar Sesión',
                 cancelButtonText: lang === 'en' ? 'Cancel' : 'Cancelar',
                 background: 'rgba(15, 23, 42, 0.9)',
                 color: '#fff',
+                showClass: {
+                    popup: 'premium-swal-show'
+                },
+                hideClass: {
+                    popup: 'premium-swal-hide'
+                },
                 customClass: {
                     popup: 'premium-swal-popup',
                     title: 'premium-swal-title'
