--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
 
   <!-- SortableJS -->
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+
+  <!-- Theme Script (Prevent Flash) -->
+  <script>
+    (function () {
+      const theme = localStorage.getItem("osintTheme") || "dark";
+      document.documentElement.setAttribute("data-bs-theme", theme);
+    })();
+  </script>
 </head>
 
-<body data-bs-theme="dark">
+<body>
   <!-- Loader -->
   <div id="loader" class="loader-overlay" style="display: none;">
     <div class="spinner"></div>
