feat: Add incident management functionality, redesign the login UI, and implement comprehensive dark/light theme support.

--- a/incidents.html
+++ b/incidents.html
@@ -45,7 +45,7 @@
             <!-- Controles Derecha -->
             <div class="navbar-controls d-flex flex-grow-1 justify-content-end align-items-center gap-2">
                 <!-- Tema -->
-                <button class="btn btn-icon btn-ghost" id="themeToggle" title="Cambiar tema">
+                <button class="btn btn-icon btn-ghost" id="theme-toggle" title="Cambiar tema">
                     <svg id="iconLight" class="icon icon-sun" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" style="display: none;">
