feat: Implement initial login page with dark/light theming, core UI components, and foundational authentication and incident management scripts.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
         <div class="dropdown d-none d-md-block">
           <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
             data-i18n="CATEGORIES">
-            Categorías
+            <span data-i18n="CATEGORIES">Categorías</span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-chevron-down ms-1" width="14" height="14"
+              viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M6 9l6 6 6-6"></path>
+            </svg>
           </button>
           <div class="dropdown-menu dropdown-menu-end" id="categories-dropdown">
             <!-- Llenado dinámicamente -->
