feat: Implement quickstart page, authentication, incident management, and translation support with new theme styling.

--- a/quickstart.html
+++ b/quickstart.html
@@ -7,6 +7,7 @@
     <title>Guía Rápida - Aegis HUB</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="src/css/quickstart.css" />
     <link rel="icon" href="plugins/favorites - Chrome/ico.png" type="image/png" />
