--- a/quickstart.html
+++ b/quickstart.html
@@ -36,8 +36,8 @@
 
             <!-- Controles Derecha -->
             <div class="navbar-controls d-flex flex-grow-1 justify-content-end align-items-center gap-2">
-                <a href="index.html" class="btn btn-ghost d-none d-md-flex" data-i18n="QS_ACCESS_DASHBOARD">Ir al
-                    HUB</a>
+                <a href="javascript:void(0)" onclick="goToHub()" class="btn btn-primary d-none d-md-flex px-4"
+                    data-i18n="QS_ACCESS_DASHBOARD">Ir al HUB</a>
 
                 <!-- Tema -->
                 <button class="btn btn-icon btn-ghost" id="theme-toggle" title="Cambiar tema">
@@ -111,7 +111,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1 data-i18n="QS_HERO_TITLE">🛡️ Aegis HUB</h1>
+        <h1 data-i18n="QS_HERO_TITLE"><span>Aegis</span> HUB</h1>
         <p data-i18n="QS_HERO_SUBTITLE">Centraliza 78 recursos OSINT en un solo lugar, detecta automáticamente el tipo
             de búsqueda y ahorra tiempo valioso en tus investigaciones.</p>
         <p data-i18n="QS_HERO_READ_GUIDE">📖 Lee la guía de inicio rápido para las funcionalidades</p>
@@ -214,19 +214,7 @@
                     <p data-i18n="QS_FEATURE_HISTORY_DESC">Revisa todas tus búsquedas anteriores</p>
                 </div>
 
-                <div class="card">
-                    <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <circle cx="12" cy="12" r="4"></circle>
-                            <path
-                                d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M4.93 19.07l1.41-1.41m11.32-11.32l1.41-1.41">
-                            </path>
-                        </svg>
-                        <span data-i18n="QS_FEATURE_THEME">Tema Oscuro/Claro</span>
-                    </h3>
-                    <p data-i18n="QS_FEATURE_THEME_DESC">Personaliza la interfaz a tu preferencia</p>
-                </div>
+
             </div>
         </section>
 
@@ -241,7 +229,7 @@
                 <span data-i18n="QS_DETECTION_TYPES">Tipos de Detección</span>
             </h2>
 
-            <div class="grid">
+            <div class="grid grid-4">
                 <div class="card">
                     <h3>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -310,18 +298,37 @@
 
             <div class="grid">
                 <div class="card">
-                    <h3>⭐</h3>
-                    <p data-i18n="QS_TIP1">Usa la estrella para marcar tus favoritos</p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon
+                                points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" />
+                        </svg>
+                        <span data-i18n="QS_TIP1">Usa la estrella para marcar tus favoritos</span>
+                    </h3>
                 </div>
 
                 <div class="card">
-                    <h3>⌨️</h3>
-                    <p data-i18n="QS_TIP2">Presiona Ctrl+K para búsqueda rápida</p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="2" y="4" width="20" height="16" rx="2" />
+                            <path d="M6 8h.01M10 8h.01M14 8h.01M18 8h.01M8 12h.01M12 12h.01M16 12h.01M7 16h10" />
+                        </svg>
+                        <span data-i18n="QS_TIP2">Presiona Ctrl+K para búsqueda rápida</span>
+                    </h3>
                 </div>
 
                 <div class="card">
-                    <h3>💾</h3>
-                    <p data-i18n="QS_TIP3">Tu historial se guarda localmente</p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z" />
+                            <polyline points="17 21 17 13 7 13 7 21" />
+                            <polyline points="7 3 7 8 15 8" />
+                        </svg>
+                        <span data-i18n="QS_TIP3">Tu historial se guarda localmente</span>
+                    </h3>
                 </div>
             </div>
         </section>
@@ -376,10 +383,10 @@
                 <span data-i18n="QS_SUPPORTED_SEARCHES">Tipos de Búsqueda Soportados</span>
             </h2>
 
-            <div class="grid">
+            <div class="grid grid-2">
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                             <circle cx="12" cy="10" r="3"></circle>
@@ -393,7 +400,7 @@
 
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <circle cx="12" cy="12" r="10"></circle>
                             <line x1="2" y1="12" x2="22" y2="12"></line>
@@ -410,7 +417,7 @@
 
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <line x1="4" y1="9" x2="20" y2="9"></line>
                             <line x1="4" y1="15" x2="20" y2="15"></line>
@@ -426,7 +433,7 @@
 
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
                             </path>
@@ -452,10 +459,10 @@
                 <span data-i18n="QS_USE_CASES">Casos de Uso</span>
             </h2>
 
-            <div class="grid">
+            <div class="grid grid-2">
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
                             <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
@@ -469,7 +476,7 @@
 
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"></path>
                             <circle cx="12" cy="12" r="3"></circle>
@@ -482,7 +489,7 @@
 
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M22 10v6M2 10l10-5 10 5-10 5z"></path>
                             <path d="M6 12v5c3 3 9 3 12 0v-5"></path>
@@ -495,7 +502,7 @@
 
                 <div class="card">
                     <h3>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M3 21h18"></path>
                             <path d="M9 8h1"></path>
@@ -555,7 +562,7 @@ http://localhost:8000</code></pre>
                 <span data-i18n="QS_DOCUMENTATION">Documentación</span>
             </h2>
 
-            <div class="grid">
+            <div class="grid grid-2">
                 <div class="card">
                     <h3 data-i18n="QS_DOC_README">README.md</h3>
                     <p data-i18n="QS_DOC_README_DESC">Guía completa de uso, características y preguntas frecuentes.</p>
@@ -621,7 +628,8 @@ http://localhost:8000</code></pre>
         <section class="section text-center">
             <p class="cta-subtitle" data-i18n="QS_CTA_SUBTITLE">Accede a Aegis HUB y realiza investigaciones
                 profesionales</p>
-            <a href="login.html" class="btn btn-primary btn-lg" data-i18n="QS_CTA_BUTTON">Acceder al HUB</a>
+            <a href="javascript:void(0)" onclick="goToHub()" class="btn btn-primary btn-lg" data-i18n="QS_CTA_BUTTON">Ir
+                al HUB</a>
         </section>
     </div>
 
@@ -634,33 +642,34 @@ http://localhost:8000</code></pre>
                         <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT"></small>
                         <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH"></small>
                     </div>
-                    <div class="social-links">
-                        <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer" title="GitHub">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                    <div class="footer-social-container">
+                        <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer"
+                            class="footer-social-link github" title="GitHub">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                 fill="currentColor">
                                 <path
                                     d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                             </svg>
                         </a>
                         <a href="https://discord.gg/NVYadvZDtQ" target="_blank" rel="noopener noreferrer"
-                            title="Discord">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                            class="footer-social-link" title="Discord">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                 fill="currentColor">
                                 <path
                                     d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276c-.598.3428-1.2205.6447-1.8733.8923a.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1835 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1835 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z" />
                             </svg>
                         </a>
                         <a href="https://www.youtube.com/@s3codecL" target="_blank" rel="noopener noreferrer"
-                            title="YouTube">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                            class="footer-social-link" title="YouTube">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                 fill="currentColor">
                                 <path
                                     d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z" />
                             </svg>
                         </a>
                         <a href="https://www.linkedin.com/in/gandradev/" target="_blank" rel="noopener noreferrer"
-                            title="LinkedIn">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                            class="footer-social-link" title="LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                 fill="currentColor">
                                 <path
                                     d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
@@ -687,8 +696,6 @@ http://localhost:8000</code></pre>
         // Back to top button
         const backToTopBtn = document.getElementById('backToTop');
 
-        window.onclick = function () { }; // Ensure window is ready
-
         window.onscroll = function () {
             if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
                 backToTopBtn.classList.add('visible');
@@ -697,12 +704,31 @@ http://localhost:8000</code></pre>
             }
         };
 
-        window.scrollToTop = function () {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
+        // SMART HUB NAVIGATION
+        window.goToHub = function () {
+            const session = localStorage.getItem('aegisSession') || sessionStorage.getItem('aegisSession');
+            if (session) {
+                try {
+                    const sessionData = JSON.parse(session);
+                    if (Date.now() < sessionData.expiresAt) {
+                        window.location.href = 'index.html';
+                        return;
+                    }
+                } catch (e) {
+                    console.error('Session error:', e);
+                }
+            }
+            window.location.href = 'login.html';
         };
+
+        if (backToTopBtn) {
+            backToTopBtn.addEventListener('click', () => {
+                window.scrollTo({
+                    top: 0,
+                    behavior: 'smooth'
+                });
+            });
+        }
 
         // Theme toggle functionality
         const themeToggle = document.getElementById('theme-toggle');
