feat: Implement internationalization and dedicated styling for incidents and quickstart pages.

--- a/admin.html
+++ b/admin.html
@@ -236,7 +236,7 @@
                             <label for="user-role" class="form-label" data-i18n="ROLE">Rol</label>
                             <select class="form-select" id="user-role" required>
                                 <option value="user" data-i18n="ROLE_USER">Usuario</option>
-                                <option value="admin" data-i18n="ADMINISTRATOR">Administrador</option>
+                                <option value="admin" data-i18n="ROLE_ADMIN">Administrador</option>
                             </select>
                         </div>
                     </div>
