feat: Add quickstart page, incident management, and comprehensive English translations for the application UI.

--- a/incidents.html
+++ b/incidents.html
@@ -545,7 +545,7 @@
                                                     <span data-i18n="SLA">SLA (horas)</span>
                                                 </label>
                                                 <input type="number" class="form-control" id="incidentSLA" min="1"
-                                                    placeholder="24">
+                                                    data-i18n-placeholder="SLA_PLACEHOLDER" placeholder="24">
                                             </div>
                                             <div class="col-md-6">
                                                 <label class="form-label">
@@ -810,8 +810,9 @@
             <div class="row align-items-center">
                 <div class="col-12 text-center d-flex flex-column align-items-center gap-3">
                     <div class="footer-branding d-flex flex-column align-items-center">
-                        <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT"></small>
-                        <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH"></small>
+                        <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT">Aegis HUB v1.8.0 | 2025</small>
+                        <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH">Made with ❤️ for the security
+                            community - s3codecL</small>
                     </div>
                     <div class="footer-social-container">
                         <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer"
