feat: Implement incident management functionality, including cybersecurity taxonomy and dedicated UI.

--- a/admin.html
+++ b/admin.html
@@ -75,8 +75,7 @@
                         <div class="user-avatar">
                             <span id="userInitial">A</span>
                         </div>
-                        <span class="user-name d-none d-md-inline" id="admin-name"
-                            data-i18n="USER_DEFAULT_NAME">Administrador</span>
+                        <span class="user-name d-none d-md-inline" id="admin-name">Administrador</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-chevron-down ms-1" width="14"
                             height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M6 9l6 6 6-6"></path>
