feat: implement incident management system with new JavaScript module and integrate into incidents page

--- a/incidents.html
+++ b/incidents.html
@@ -294,15 +294,20 @@
 
                             <!-- Sección 1: Información Básica -->
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingBasic">
+                                <h2 class="accordion-header">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseBasic" aria-expanded="true"
-                                        aria-controls="collapseBasic">
+                                        data-bs-target="#collapseInfo">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon me-2" width="24" height="24"
+                                            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none">
+                                            <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path>
+                                            <path d="M12 9h.01"></path>
+                                            <path d="M11 12h1v4h1"></path>
+                                        </svg>
                                         <strong data-i18n="BASIC_INFO">Información Básica</strong>
                                     </button>
                                 </h2>
-                                <div id="collapseBasic" class="accordion-collapse collapse show"
-                                    aria-labelledby="headingBasic" data-bs-parent="#incidentFormAccordion">
+                                <div id="collapseInfo" class="accordion-collapse collapse show"
+                                    data-bs-parent="#incidentAccordion">
                                     <div class="accordion-body">
                                         <div class="row g-3">
                                             <div class="col-md-6">
@@ -346,15 +351,21 @@
 
                             <!-- Sección 2: Detección -->
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingDetection">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseDetection" aria-expanded="false"
-                                        aria-controls="collapseDetection">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseDetection">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon me-2" width="24" height="24"
+                                            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none">
+                                            <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                                            <path
+                                                d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6">
+                                            </path>
+                                        </svg>
                                         <strong data-i18n="DETECTION_INFO">Información de Detección</strong>
                                     </button>
                                 </h2>
-                                <div id="collapseDetection" class="accordion-collapse collapse"
-                                    aria-labelledby="headingDetection" data-bs-parent="#incidentFormAccordion">
+                                <div id="collapseDetection" class="accordion-collapse collapse show"
+                                    data-bs-parent="#incidentAccordion">
                                     <div class="accordion-body">
                                         <div class="row g-3">
                                             <div class="col-md-6">
@@ -385,15 +396,24 @@
 
                             <!-- Sección 3: Clasificación Técnica -->
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingClassification">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseClassification" aria-expanded="false"
-                                        aria-controls="collapseClassification">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseClassification">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon me-2" width="24" height="24"
+                                            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none">
+                                            <path d="M9 5h10l2 2l-2 2h-10a1 1 0 0 1 -1 -1v-2a1 1 0 0 1 1 -1z"></path>
+                                            <path d="M13 13h7l2 2l-2 2h-7a1 1 0 0 1 -1 -1v-2a1 1 0 0 1 1 -1z"></path>
+                                            <path d="M9 15h10l2 2l-2 2h-10a1 1 0 0 1 -1 -1v-2a1 1 0 0 1 1 -1z"
+                                                stroke="none"></path>
+                                            <path d="M4 17v-10"></path>
+                                            <path d="M4 7l2 -2"></path>
+                                            <path d="M4 17l2 2"></path>
+                                        </svg>
                                         <strong data-i18n="TECHNICAL_CLASSIFICATION">Clasificación Técnica</strong>
                                     </button>
                                 </h2>
-                                <div id="collapseClassification" class="accordion-collapse collapse"
-                                    aria-labelledby="headingClassification" data-bs-parent="#incidentFormAccordion">
+                                <div id="collapseClassification" class="accordion-collapse collapse show"
+                                    data-bs-parent="#incidentAccordion">
                                     <div class="accordion-body">
                                         <div class="row g-3">
                                             <div class="col-md-4">
@@ -699,11 +719,6 @@
                 if (userNameEl) userNameEl.textContent = currentUser.name || currentUser.username || 'Admin';
             }
 
-            // Inicializar tema
-            const savedTheme = localStorage.getItem("theme") || "dark";
-            document.body.setAttribute("data-bs-theme", savedTheme);
-            updateThemeIcon(savedTheme);
-
             // Inicializar idioma
             const savedLang = localStorage.getItem("osintLanguage") || "es";
             Translations.setLanguage(savedLang);
@@ -738,35 +753,7 @@
                 });
             }
 
-            // Theme Toggle
-            const themeToggle = document.getElementById("themeToggle");
-            if (themeToggle) {
-                themeToggle.addEventListener("click", () => {
-                    const currentTheme = document.body.getAttribute("data-bs-theme");
-                    const newTheme = currentTheme === "dark" ? "light" : "dark";
-                    document.body.setAttribute("data-bs-theme", newTheme);
-                    localStorage.setItem("theme", newTheme);
-                    updateThemeIcon(newTheme);
-                });
-            }
 
-            // Lang Toggle
-            const langToggle = document.getElementById("langToggle");
-            if (langToggle) {
-                langToggle.addEventListener("click", () => {
-                    const currentLang = Translations.currentLanguage;
-                    const newLang = currentLang === "es" ? "en" : "es";
-                    Translations.setLanguage(newLang);
-                    updateLangButton(newLang);
-
-                    // Re-renderizar incidencias
-                    if (window.IncidentManager) {
-                        IncidentManager.populateFilters();
-                        IncidentManager.renderIncidents();
-                        IncidentManager.updateStats();
-                    }
-                });
-            }
 
             // Resetear formulario si es Nuevo Incidente (no hay currentIncident)
             const incidentModal = document.getElementById('incidentModal');
@@ -807,11 +794,11 @@
             if (!iconLight || !iconDark) return;
 
             if (theme === "dark") {
-                iconLight.style.display = "block";
+                iconLight.style.display = "unset";
                 iconDark.style.display = "none";
             } else {
                 iconLight.style.display = "none";
-                iconDark.style.display = "block";
+                iconDark.style.display = "unset";
             }
         }
 
